--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script type="module" crossorigin src="/assets/index.CPJ1tE2z.js"></script>
+    <script type="module" crossorigin src="/assets/index.08fU3nis.js"></script>
+    <link rel="modulepreload" crossorigin href="/assets/vendor.DOHx2j1n.js">
     <link rel="stylesheet" crossorigin href="/assets/index.OjzGivhm.css">
   <link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
   <body>
