--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="module" crossorigin src="/assets/index.08fU3nis.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/vendor.DOHx2j1n.js">
     <link rel="stylesheet" crossorigin href="/assets/index.OjzGivhm.css">
-  <link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
+  </head>
   <body>
     <div id="root">
       <!-- Fallback loading screen for mobile -->
