--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script type="module" crossorigin src="/assets/index.08fU3nis.js"></script>
-    <link rel="modulepreload" crossorigin href="/assets/vendor.DOHx2j1n.js">
-    <link rel="stylesheet" crossorigin href="/assets/index.OjzGivhm.css">
+    <script type="module" crossorigin src="/assets/index.DhdH84Tl.js"></script>
   </head>
   <body>
     <div id="root">
