--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script crossorigin src="/assets/index.DhdH84Tl.js"></script>
+    <script crossorigin src="/assets/index.D2sB7MlY.js"></script>
   </head>
   <body>
     <div id="root">
