--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script crossorigin src="/assets/index.D2sB7MlY.js"></script>
+    <script type="module" crossorigin src="/assets/index.C6mQvRP6.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index.OjzGivhm.css">
   </head>
   <body>
     <div id="root">
