--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script type="module" crossorigin src="/assets/index.6HJHZyWV.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index.DT3sRzEl.css">
+    <script crossorigin src="/assets/index.CmM59xnr.js"></script>
   </head>
   <body>
     <div id="root">
