--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     
     <title>ADHD Focus & Flow</title>
-    <script crossorigin src="/assets/index.hNxhb8xS.js"></script>
+    <script crossorigin src="/assets/index.n2oZiu6Q.js"></script>
   </head>
   <body>
     <div id="root">
