--- a/minimal-react-debug.html
+++ b/minimal-react-debug.html
@@ -31,7 +31,7 @@
         
         // Step 1: Load our production bundle
         const script = document.createElement('script');
-        script.src = '/assets/index.hNxhb8xS.js';
+        script.src = '/assets/index.BSY6qBi4.js';
         
         script.onload = function() {
             addResult('✅ Production bundle loaded', 'pass');
